# TOTP

./: .gitignore  Makefile  pyproject.toml
Makefiles/: git.Makefile
src/: array_version.py  main.py
